Tried to solve slider problem (adding it on mobile only)

--- a/css/main.css
+++ b/css/main.css
@@ -903,8 +903,8 @@ a :visited {
 }
 
 .main_benefits_single {
-  width: 350px;
-  height: 340px;
+  width: 305px;
+  height: 380px;
   box-sizing: border-box;
   text-align: left;
   margin-bottom: 85px;
@@ -931,6 +931,26 @@ a :visited {
   width: 150px;
   height: 110px;
   align-self: flex-start;
+}
+
+@media screen and (max-width: 915px) {
+  .main_benefits_container {
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .main_benefits_container {
+    justify-content: center;
+  }
+  .main_benefits_single {
+    height: 340px;
+    margin-bottom: 15px;
+  }
+  .main_benefits_single h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .main_products {
